spice: OPENGL optional dependency is for the spice client

--- a/utils/spice/HISTORY
+++ b/utils/spice/HISTORY
@@ -1,6 +1,7 @@
 2013-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on qemu built with nss support
 	  Optionally depends on LIBSASL
+	  OPENGL optional dependency is for the spice client
 
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.12.4
