spice: Optionally depends on libxinerama

--- a/utils/spice/HISTORY
+++ b/utils/spice/HISTORY
@@ -2,6 +2,7 @@
 	* DEPENDS: Depends on qemu built with nss support
 	  Optionally depends on LIBSASL
 	  OPENGL optional dependency is for the spice client
+	  Optionally depends on libxinerama
 
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.12.4
