--- a/utils/spice/HISTORY
+++ b/utils/spice/HISTORY
@@ -1,5 +1,5 @@
 2013-09-04 Eric Sandall <sandalle@sourcemage.org>
-	* DEPENDS: Depends on qemu built with nss support
+	* DEPENDS: Optionally depends on qemu built with nss support
 	  Optionally depends on LIBSASL
 	  OPENGL optional dependency is for the spice client
 	  Optionally depends on libxinerama
