--- a/utils/spice-gtk/HISTORY
+++ b/utils/spice-gtk/HISTORY
@@ -1,3 +1,8 @@
+2013-09-04 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Suggest virt-viewer for a better spice client
+	  See http://spice-space.org/download.html
+	  Make sure virt-viewer uses spice and the same GTK as spice-gtk
+
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* Created
 
