--- a/utils/spice-gtk/HISTORY
+++ b/utils/spice-gtk/HISTORY
@@ -2,6 +2,7 @@
 	* DEPENDS: Suggest virt-viewer for a better spice client
 	  See http://spice-space.org/download.html
 	  Make sure virt-viewer uses spice and the same GTK as spice-gtk
+	  Optionally depend on qemu with nss for smart cards
 
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* Created
