--- a/x11/gtk-vnc/HISTORY
+++ b/x11/gtk-vnc/HISTORY
@@ -1,3 +1,6 @@
+2013-09-04 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Suggest virt-viewer with appropriate gtk
+
 2012-10-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.5.1
 	  SOURCE matches upstream SHA256
