--- a/x11/gtk-vnc/HISTORY
+++ b/x11/gtk-vnc/HISTORY
@@ -1,5 +1,6 @@
 2013-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Suggest virt-viewer with appropriate gtk
+	* Allow for building gtk-vnc without an external entity enforcing gtk+2|3
 
 2012-10-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.5.1
