--- a/x11/virt-viewer/HISTORY
+++ b/x11/virt-viewer/HISTORY
@@ -1,3 +1,6 @@
+2013-09-04 Eric Sandall <sandalle@sourcemage.org>
+	* Allow for selecting spice-gtk or gtk-vnc, these are exclusive options
+
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.5.7
 
