--- a/net/thc-amap/HISTORY
+++ b/net/thc-amap/HISTORY
@@ -1,3 +1,9 @@
+2013-09-05 David C. Haley <khoralin@gmail.com>
+	* INSTALL: removed, no longer needed
+	* BUILD: removed, no longer needed
+	* PRE_BUILD: removed, no longer needed
+	* DETAILS: updated spell to 5.4
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
