--- a/e-17/e17/HISTORY
+++ b/e-17/e17/HISTORY
@@ -1,3 +1,7 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Replace xorg-libs with libx11, libxau, libxdmcp, and 
+	  libxext
+
 2013-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.17.4
 
