x11-protocol: Replace xorg-libs with libx11, libxau, and libxext as runtime dependencies Per README, doesn't require an X11-SERVER on the current machine

--- a/perl-cpan/x11-protocol/HISTORY
+++ b/perl-cpan/x11-protocol/HISTORY
@@ -1,3 +1,7 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Per README, doesn't require an X11-SERVER on the current machine
+	  Replace xorg-libs with libx11, libxau, and libxext as runtime dependencies
+
 2008-04-16  Mark Bainter <mbainter@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, HISTORY: spell created
 
