--- a/e-17/evas/HISTORY
+++ b/e-17/evas/HISTORY
@@ -1,3 +1,6 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Replaced xorg-libs with libsm and libx11
+
 2013-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7.8
 
