--- a/x11/xscreensaver/HISTORY
+++ b/x11/xscreensaver/HISTORY
@@ -1,3 +1,7 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Replaced xorg-libs with libice, libx11, libxxf86misc, libxxf86vm,
+	  libxi, libxmu, libxrender, and libxt
+
 2012-12-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.20
 
