xscreensaver: Updated to 5.22

--- a/x11/xscreensaver/HISTORY
+++ b/x11/xscreensaver/HISTORY
@@ -1,4 +1,5 @@
 2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 5.22
 	* DEPENDS: Replaced xorg-libs with libice, libx11, libxxf86misc, libxxf86vm,
 	  libxi, libxmu, libxrender, and libxt
 
