--- a/xfce/xfce4-profile/HISTORY
+++ b/xfce/xfce4-profile/HISTORY
@@ -1,3 +1,6 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Replaced runtime dependency on xorg-libs with X11-SERVER
+
 2013-06-14 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: terminal renamed to xfce4-terminal
 
