sdl: Replaced xorg-libs with libx11
Additionally depend on libice when depending on libx11

--- a/libs/sdl/HISTORY
+++ b/libs/sdl/HISTORY
@@ -1,3 +1,7 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* *SUB_DEPENDS: Replaced xorg-libs with libx11
+	* DEPENDS: Additionally depend on libice when depending on libx11
+
 2012-01-27 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 1.2.15
 	* PRE_BUILD: removed mouse fix patch as no longer needed
