--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,3 +1,6 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Replaced xorg-libs with libx11, libice, libsm, libxext, libxtst
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
