pulseaudio: gtk+2 support also needs libxxf86vm

--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,5 +1,6 @@
 2013-09-06 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Replaced xorg-libs with libx11, libice, libsm, libxext, libxtst
+	  gtk+2 support also needs libxxf86vm
 
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
