--- a/graphics-libs/cegui/HISTORY
+++ b/graphics-libs/cegui/HISTORY
@@ -1,3 +1,6 @@
+2013-09-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Replaced xorg-libs with libx11 and libxxf86vm
+
 2012-01-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, gcc46.patch: fixed build with gcc 4.6
 	* CONFLICTS: added conflict with tinyxml
