--- a/i18n/ibus/HISTORY
+++ b/i18n/ibus/HISTORY
@@ -1,3 +1,7 @@
+2013-09-06 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 1.5.3
+	* DEPENDS: updated to current depends and added optionals
+
 2012-10-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.4.99.20121006 (for gnome-settings-daemon 3.6.1)
 	  Nothing else currently uses ibus
