ibus-anthy: updated to 1.5.3

--- a/i18n/ibus-anthy/HISTORY
+++ b/i18n/ibus-anthy/HISTORY
@@ -1,3 +1,7 @@
+2013-09-06 Robin Cook <rcook@wyrms.net>
+	* DETAILS: update to 1.5.3
+	* DEPENDS: added addition depends
+
 2012-10-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.2.7
 
