--- a/mail/postfix/HISTORY
+++ b/mail/postfix/HISTORY
@@ -1,3 +1,6 @@
+2013-09-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.8
+
 2013-07-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.7
 	* no-db.patch: updated patch to support Linux kernel 3.x
