--- a/xorg-util/util-macros/HISTORY
+++ b/xorg-util/util-macros/HISTORY
@@ -1,3 +1,6 @@
+2012-09-07  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.17.1
+
 2012-03-17  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.17
 
