--- a/libs/libusbx/HISTORY
+++ b/libs/libusbx/HISTORY
@@ -1,3 +1,6 @@
+2013-09-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.0.17
+
 2013-07-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.0.16
 
