--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2013-09-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.14
+
 2013-06-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.12
 	  SECURITY_PATCH++ fixes CVE-2013-2168
