--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-09-07 Thomas Orgis <sobukus@sourcemage.org>
+	* science/nco: new spell, NetCDF Operators
+
 2013-08-30 Ismael Luceno <ismael@sourcemage.org>
 	* devel/comparator: new spell, Rapidly find common code segments in
 	  large source trees
