--- a/database/dbd-firebird/HISTORY
+++ b/database/dbd-firebird/HISTORY
@@ -1,3 +1,6 @@
+2013-09-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.12
+
 2012-09-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.11
 
