chat-libs/libotr, chat-im/pidgin-otr: version 4.0.0

--- a/chat-libs/libotr/HISTORY
+++ b/chat-libs/libotr/HISTORY
@@ -1,3 +1,6 @@
+2013-09-07 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS: version 4.0.0
+
 2012-11-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.2.1
 
