--- a/chat-im/pidgin-otr/HISTORY
+++ b/chat-im/pidgin-otr/HISTORY
@@ -1,3 +1,6 @@
+2013-09-07 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS: version 4.0.0
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: converted to upstream signature checking
 	* 2BA87C5C.gpg: added gpg keyring
