--- a/xorg-lib/libxmu/HISTORY
+++ b/xorg-lib/libxmu/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.2
+
 2012-03-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.1
 
