--- a/xorg-lib/libxpm/HISTORY
+++ b/xorg-lib/libxpm/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Treeve Jelbert <treeve@souremage.org>
+	* DETAILS: version 3.5.11
+
 2010-11-01 Treeve Jelbert <treeve@souremage.org>
 	* DETAILS: version 3.5.9
 
