--- a/xorg-lib/libxrandr/HISTORY
+++ b/xorg-lib/libxrandr/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.4.2
+
 2013-06-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.4.1
 	  SECURITY_PATCH=1 fixes CVE-2013-1986
