--- a/xorg-lib/libxv/HISTORY
+++ b/xorg-lib/libxv/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.10
+
 2013-06-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.9
 	  SECURITY_PATCH++ fixes previous security fix
