--- a/xorg-lib/libsm/HISTORY
+++ b/xorg-lib/libsm/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.2
+
 2012-03-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.1
 
