--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix WEB_SITE
+
 2013-08-24 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS. DEPENDS: version 23.0.1
 
