gstreamer: added patch to build with bison 3

--- a/video-libs/gstreamer/HISTORY
+++ b/video-libs/gstreamer/HISTORY
@@ -1,3 +1,7 @@
+2013-09-08 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: created to add bison3 patch
+	  https://bug706462.bugzilla-attachments.gnome.org/attachment.cgi?id=252504
+
 2012-03-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.10.36
 
