--- a/doc/linuxdoc-tools/HISTORY
+++ b/doc/linuxdoc-tools/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.9.69
+
 2006-08-15 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED (deprecated in favor of 
 	  PATCHLEVEL).
