--- a/science/qlandkarte-gt/HISTORY
+++ b/science/qlandkarte-gt/HISTORY
@@ -1,3 +1,6 @@
+2013-09-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.7.3
+
 2013-07-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.7.1
 
