--- a/devel/guile/HISTORY
+++ b/devel/guile/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 2.0.9
+
 2013-05-30 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: doesn't compile with -ffast-math
 
