--- a/audio-libs/libmad/HISTORY
+++ b/audio-libs/libmad/HISTORY
@@ -1,5 +1,7 @@
-2013-08-22 Eric Sandall <sandalle@sourcemage.org>
-	* PRE_BUILD: Use --add-missing with automake
+2013-09-10 Robin Cook <rcook@wyrms.net>
+	* DEPENDS: depend on automake-1.9 
+	* PRE_BUILD: change to using automake-1.9
+	* updated no cflags patch with info from linux from scratch
 
 2013-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD: fix obsolete macro in configure.ac
