--- a/audio-libs/libmad/HISTORY
+++ b/audio-libs/libmad/HISTORY
@@ -1,6 +1,5 @@
 2013-09-10 Robin Cook <rcook@wyrms.net>
-	* DEPENDS: depend on automake-1.9 
-	* PRE_BUILD: change to using automake-1.9
+	* PRE_BUILD: added --add-missing
 	* updated no cflags patch with info from linux from scratch
 
 2013-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
