--- a/utils/uptimed/HISTORY
+++ b/utils/uptimed/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: modify to build with newest automake and autoconf
+
 2013-03-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.3.17
 	* PRE_BUILD: added patch to all building with current autotools
