swh-plugins: added patch to remove set locale calls

--- a/audio-plugins/swh-plugins/HISTORY
+++ b/audio-plugins/swh-plugins/HISTORY
@@ -1,3 +1,7 @@
+2013-09-10 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: added patch to remove setlocale calls
+	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=672705
+
 2012-09-22 Sukneet Basuta <sukneet@sourcemage.org>
 	* PRE_BUILD: added, to apply patches and run autopoint and 
 	  autoreconf. Autopoint is run to update gettext macros.
