--- a/xorg-lib/libx11/HISTORY
+++ b/xorg-lib/libx11/HISTORY
@@ -1,3 +1,6 @@
+2013-09-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.2
+
 2013-07-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.1
 	  update DESCRIPTION
