--- a/xorg-app/xrdb/HISTORY
+++ b/xorg-app/xrdb/HISTORY
@@ -1,3 +1,6 @@
+2013-09-09  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.0
+
 2011-04-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.9, SECURITY_PATCH=1, CVE-2011-0465
 
