--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,6 @@
+2013-09-09 Eric Sandall <sandalle@sourcemage.org>
+	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.31.patch: Works with 3.11
+
 2013-09-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* latest.defaults: LATEST_maintenance_patches_3=3.11, LATEST_3=3.11
 	* info/kernels/3.11: added
