--- a/haskell/haskell-parsec/HISTORY
+++ b/haskell/haskell-parsec/HISTORY
@@ -1,3 +1,6 @@
+2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.1.3
+
 2013-03-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: removed dependency on haskell-bytestring
 
