--- a/haskell/haskell-hslogger/HISTORY
+++ b/haskell/haskell-hslogger/HISTORY
@@ -1,3 +1,6 @@
+2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.3
+
 2013-07-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
