--- a/video-libs/gstreamer-1.0/HISTORY
+++ b/video-libs/gstreamer-1.0/HISTORY
@@ -1,3 +1,6 @@
+2013-09-09 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.0.10
+
 2013-04-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.7
 
