--- a/disk/cdrdao/HISTORY
+++ b/disk/cdrdao/HISTORY
@@ -1,3 +1,8 @@
+2013-09-09 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: moved all in build here.
+	  added aclocal and automake --add-missing to build with new automake
+	* BUILD: no longer needed
+
 2013-02-17 Robin Cook <rcook@wyrms.net>
 	* PRE_BUILD: added patch for configure.ac
 
