--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.38
+
 2013-08-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.36
 	  now supports poppler-0.24.0
