--- a/shell-term-fm/mksh/HISTORY
+++ b/shell-term-fm/mksh/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to R48b
+
 2013-07-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to R47
 
