--- a/x11/xlockmore/HISTORY
+++ b/x11/xlockmore/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.43
+
 2012-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.41
 
