--- a/utils/pv/HISTORY
+++ b/utils/pv/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.12
+
 2013-03-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.6
 
