--- a/utils/psmisc/HISTORY
+++ b/utils/psmisc/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 22.20
+
 2012-06-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 22.19
 
