--- a/libs/libqrencode/HISTORY
+++ b/libs/libqrencode/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.4.3
+
 2013-03-03 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.4.2
 
