--- a/education/klavaro/HISTORY
+++ b/education/klavaro/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.9.9
+
 2013-02-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.9.7
 
