--- a/net/nsd/HISTORY
+++ b/net/nsd/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.2.16
+
 2013-02-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.2.15
 	* DEPENDS: don't force BIND8-like stats; use NSD_OPTS
