--- a/python-pypi/python-ldap/HISTORY
+++ b/python-pypi/python-ldap/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.13
+
 2012-06-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.10
 
