--- a/mail/msmtp/HISTORY
+++ b/mail/msmtp/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.31
+
 2012-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.30; added desc about mail forwarding
 	* PROVIDES: added SENDMAIL
