--- a/audio-libs/libogg/HISTORY
+++ b/audio-libs/libogg/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.1
+
 2011-08-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.0
 
