--- a/ftp/tnftp/HISTORY
+++ b/ftp/tnftp/HISTORY
@@ -1,2 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 20130505
+	* DEPENDS: added openssl optional dependency
+
 2011-07-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, CONFIGURE, BUILD, tnftp.gpg: spell created
