--- a/utils/kexec-tools/HISTORY
+++ b/utils/kexec-tools/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.0.4
+
 2012-04-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.3; switched back to hash checking
 	* PRE_BUILD: removed
