--- a/utils/dialog/HISTORY
+++ b/utils/dialog/HISTORY
@@ -1,3 +1,6 @@
+2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2-20130902
+
 2013-06-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2-20130523
 
