--- a/graphics/darktable/HISTORY
+++ b/graphics/darktable/HISTORY
@@ -1,3 +1,7 @@
+2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.3
+	* PRE_BUILD, wb_presets_nx100_liliput_plus.patch: removed
+
 2013-07-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: remove BUILD_SLIDESHOW=off from OPTS
 	* PRE_BUILD, wb_presets_nx100_liliput_plus.patch: add support
