--- a/audio-soft/aumix/HISTORY
+++ b/audio-soft/aumix/HISTORY
@@ -1,3 +1,11 @@
+2013-09-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.1; switched to hash source check; don't
+	  do doc'ing
+	* DEPENDS: dropped gtk+1 support; added gettext optional dependency,
+	  added xprop optional dependency for xaumix script
+	* PRE_BUILD: drop autotools hacks
+	* aumix.gpg: deleted
+
 2008-10-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: removed deprecated MAINTAINER, UPDATED vars; PATCHLEVEL+=1;
 	  quoting paths; fixed descs
