added missing 'opendkim' account for opendkim spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* accounts, groups: added missing 'opendkim' account for opendkim spell
+
 2013-09-07 Thomas Orgis <sobukus@sourcemage.org>
 	* science/nco: new spell, NetCDF Operators
 
