--- a/libs/libcap-ng/HISTORY
+++ b/libs/libcap-ng/HISTORY
@@ -1,3 +1,7 @@
+2013-09-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.3
+	* DEPENDS: added, for python bindings
+
 2011-01-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.6.5
 
