boost - extra libaries

--- a/libs/boost/HISTORY
+++ b/libs/boost/HISTORY
@@ -1,3 +1,6 @@
+2013-09-12 Treeeve Jelbert <treeve@sourcemage.org>
+	* CONFIGURE, PRE_SUB_DEPENDS, SUB_DEPENDS: add coroutine and log
+
 2013-07-03 Treeeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1_54_0
 
