--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-09-13 Vlad Glagolev <stealth@sourcemage.org>
 	* accounts, groups: added 'dk-milter' account for dk-milter spell
+	* mail/dk-milter: new spell, DomainKeys milter for Sendmail
 
 2013-09-12 Vlad Glagolev <stealth@sourcemage.org>
 	* accounts, groups: added missing 'opendkim' account for opendkim spell
