cairo: updated to 1.12.16

--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,6 @@
+2013-09-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.12.16
+
 2013-06-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added binutils optional dependency
 
