--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2013-09-13 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated devel to 1.7.2
+
 2013-08-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated devel to 1.7.1
 
