--- a/video-libs/gst-plugins-good/HISTORY
+++ b/video-libs/gst-plugins-good/HISTORY
@@ -1,3 +1,6 @@
+2013-09-13 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: apply another patch to fix v4l2 compile
+
 2013-02-17 Robin Cook <rcook@wyrms.net>
 	* PRE_BUILD: apply patch to fix v4l2 compile
 
