--- a/video/mlt/HISTORY
+++ b/video/mlt/HISTORY
@@ -1,3 +1,6 @@
+2013-09-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to version 0.9.0
+
 2013-02-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.8.8
 	  update website
