--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-09-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.11.1: added
+	* latest_defaults: version 3.11.1
+
 2013-09-10 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: Documentation/networking/ifenslave.c was removed in 3.11-rc1
 	  see https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/?id=b1098bbe1b24d5d90cff92fbd716d2ef4bed2cff
