--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,6 @@
+2013-09-14 Robin Cook <rcook@wyrms.net>
+	* BUILD: force to use gcc as will use clang by default and fail
+
 2013-07-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.3
 
