--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,7 @@
+2013-09-15 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.10.2, SECURITY_PATCH=45
+	* PRE_BUILD, 01_fix_pod_file.patch: removed
+
 2013-07-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.10.1, SECURITY_PATCH=44
 	* PRE_BUILD, 01_fix_pod_file.patch: patch from Arch added
