net/nfs-utils: version 1.2.8

--- a/net/nfs-utils/HISTORY
+++ b/net/nfs-utils/HISTORY
@@ -1,3 +1,7 @@
+2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.8
+	* exportfs.patch, sysstat.patch, PRE_BUILD: removed
+
 2012-10-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL+=1
 	* init.d/nfs: nfsd proc filesystem has nothing to do with NFS4-only;
