--- a/net/iptraf-ng/HISTORY
+++ b/net/iptraf-ng/HISTORY
@@ -1,3 +1,6 @@
+2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.1.4, reformatted description
+
 2013-05-04 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.1.3.1
 
