--- a/libs/libtirpc/HISTORY
+++ b/libs/libtirpc/HISTORY
@@ -1,6 +1,9 @@
+2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2013-03-17 Treeve Jelbert <treeve@sourcemage.org>
-	* DDETAILS: version 0.2.3
-	*  PRE_BUILD, *.patch: deleted
+	* DETAILS: version 0.2.3
+	* PRE_BUILD, *.patch: deleted
 
 2011-06-24 Elisamuel Resto <ryuji@sourcemage.org>
 	* PRE_BUILD: Added to apply patches and fix build
