--- a/x11-toolkits/gtk+3/HISTORY
+++ b/x11-toolkits/gtk+3/HISTORY
@@ -1,3 +1,6 @@
+2013-09-15 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.8.4
+
 2013-06-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.2
 
