--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* utils/input-utils: new spell, a set of tools for debugging input
+	  layer specific problems
+
 2013-09-13 Vlad Glagolev <stealth@sourcemage.org>
 	* accounts, groups: added 'dk-milter' account for dk-milter spell
 	* mail/dk-milter: new spell, DomainKeys milter for Sendmail
