New Spell: gnupg2
This spell is created to differentiate the 'gnupg' spell, currently
at 1.4.14, and a second branch of the same spell, which currently
sits at 2.0.21.

The upstream developer states that these two branch do NOT conflict
with one another and may in fact be used at the same time on the same
machine without adverse consequences.

Dependencies were set using the README file provided in the source
code tarball. It needs to be noted that while the 'libassuan'
library is stated as being required, it did not appear to be needed
when manualling performaing a './configure' and 'make'. I leave it
up to those wider than I to determine if the dependancy requirements
be followed as they stand from the upstream developer, or if the
dependencies be set based upon the spell creator's hands-on
observations.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
 	* utils/input-utils: new spell, a set of tools for debugging input
 	  layer specific problems
 
+2013-09-15 David C. Haley <khoralin@gmail.com>
+	* crypto/gnupg2: new spell, newer branch of gnupg (2.x)
+
 2013-09-13 Vlad Glagolev <stealth@sourcemage.org>
 	* accounts, groups: added 'dk-milter' account for dk-milter spell
 	* mail/dk-milter: new spell, DomainKeys milter for Sendmail
