--- a/utils/acpid2/HISTORY
+++ b/utils/acpid2/HISTORY
@@ -1,3 +1,6 @@
+2013-09-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.0.20
+
 2013-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.19
 	* PRE_BUILD: apply patch
