--- a/wm-addons/parcellite/HISTORY
+++ b/wm-addons/parcellite/HISTORY
@@ -1,3 +1,6 @@
+2013-09-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.1.6
+
 2010-01-03 Vasil Yonkov <spirtbrat@sourcemage.org>
 	* DETAILS: updated spell to 0.9.2
 
