--- a/xorg-app/xinput/HISTORY
+++ b/xorg-app/xinput/HISTORY
@@ -1,3 +1,6 @@
+2012-09-17 Treeve Jelbert <treeve@sdourcemage.org>
+	* DETAILS: version 1.6.1
+
 2012-06-04 Treeve Jelbert <treeve@sdourcemage.org>
 	* DETAILS: version 1.6.0
 
