--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2013-09-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.5
+
 2013-07-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.3
 	* PRE_BUILD: generalise
