nfs-utils: Fix SOURCE_URL for duplicate '/' causing 404

--- a/net/nfs-utils/HISTORY
+++ b/net/nfs-utils/HISTORY
@@ -1,3 +1,6 @@
+2013-09-17 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Fix SOURCE_URL for duplicate '/' causing 404
+
 2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.2.8
 	* exportfs.patch, sysstat.patch, PRE_BUILD: removed
