supermin: Added Tool for building supermin appliances

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-09-17 Eric Sandall <sandalle@sourcemage.org>
 	* redhat.gpg: Add E1B768A0 for libguestfs and supermin from Red Hat
 	  See https://www.redhat.com/archives/libguestfs/2013-May/msg00005.html
+	* utils/supermin: Added Tool for building supermin appliances
 
 2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/input-utils: new spell, a set of tools for debugging input
