--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* redhat.gpg: Add E1B768A0 for libguestfs and supermin from Red Hat
 	  See https://www.redhat.com/archives/libguestfs/2013-May/msg00005.html
 	* utils/supermin: Added Tool for building supermin appliances
+	* utils/libguestfs: Added Set of tools for virtual machine disk images
 
 2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/input-utils: new spell, a set of tools for debugging input
