--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	  See https://www.redhat.com/archives/libguestfs/2013-May/msg00005.html
 	* utils/supermin: Added Tool for building supermin appliances
 	* utils/libguestfs: Added Set of tools for virtual machine disk images
+	* java/davmail: Added a POP/IMAP/SMTP/Caldav/Carddav/LDAP exchange gateway
 
 2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/input-utils: new spell, a set of tools for debugging input
