mozilla.gpg: Added 15A0A4BC for latest Mozilla releases

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* utils/supermin: Added Tool for building supermin appliances
 	* utils/libguestfs: Added Set of tools for virtual machine disk images
 	* java/davmail: Added a POP/IMAP/SMTP/Caldav/Carddav/LDAP exchange gateway
+	* mozilla.gpg: Added 15A0A4BC for latest Mozilla releases
 
 2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/input-utils: new spell, a set of tools for debugging input
