http/firefox: version 24.0

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2013-09-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 24.0, SECURITY_PATCH++
+
 2013-09-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix WEB_SITE
 
