--- a/devel/ltrace/HISTORY
+++ b/devel/ltrace/HISTORY
@@ -1,3 +1,6 @@
+2013-09-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.7.3, SOURCE_URL[0] updated
+
 2012-12-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.7.2
 
