seamonkey 2.21, SECURITY_PATCH=56

--- a/http/seamonkey/HISTORY
+++ b/http/seamonkey/HISTORY
@@ -1,3 +1,7 @@
+2013-09-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.21, SECURITY_PATCH=56
+	* DEPENDS: sqlite3 >= 3.7.17 is needed
+
 2013-08-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.20, SECURITY_PATCH=55
 	* DEPENDS: required versions for nss updated
