--- a/devel/iasl/HISTORY
+++ b/devel/iasl/HISTORY
@@ -1,3 +1,8 @@
+2013-09-19 David C. Haley <khoralin@gmail.com>
+	* DETAILS: version update 20121220 -> 20130823
+	  Updated SOURCE_URL & WEB_SITE links
+	  LICENSE[0] updated to INTEL (reflected on developer site).
+
 2012-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 20121220; added changes file to DOCS
 	* DEPENDS: added, for required dependencies to build
