--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,7 @@
+2013-09-19 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 24.0
+	* mozconfig,PRE_BUILD,BUILD,INSTALL: Sync with firefox's setup, much better
+
 2013-08-24 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS, DEPENDS: version 17.0.8
 
