--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2013-09-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.6
+
 2013-09-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.4
 
