--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,10 @@
+2013-09-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.98
+	* INSTALL: use make_single to avoid a race when installing manpages
+	  setting permissions for '/usr/share/man/man1/sigtool.1':
+	  No such file or directory
+	* DEPENDS: remove dazukofs, add ncurses
+
 2013-04-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.97.8
 	  SECURITY_PATCH++
