deprecate kernels/dazuko [replaced by unmaintained]

--- a/kernels/dazuko/INSTALL
+++ b/kernels/dazuko/INSTALL
@@ -1,6 +1,1 @@
-KVERS=$(get_kernel_version)          &&
-CVERS=$(uname -r)                    &&
-# Makefile is incorrect 
-sedit "s/$CVERS/$KVERS/;/depmod/D"  Makefile   &&
-make install                         &&
-cp dazuko*.h /usr/include
+true
