--- a/xfce/xfce4-dict/HISTORY
+++ b/xfce/xfce4-dict/HISTORY
@@ -1,3 +1,6 @@
+2013-09-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added missing libxfcegui4 dependency
+
 2013-06-14 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.7.0
 	  SOURCE matches upstream posted SHA1
