--- a/doc/po4a/HISTORY
+++ b/doc/po4a/HISTORY
@@ -1,3 +1,8 @@
+2013-09-20 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: removed, no longer needed
+	* BUILD, INSTALL: Use Build.PL
+	* DETAILS: updated spell to 0.45
+
 2012-01-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add dependency on podlators
 
