--- a/graphics/mcomix/HISTORY
+++ b/graphics/mcomix/HISTORY
@@ -1,3 +1,6 @@
+2013-09-20 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.00
+
 2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: pil -> pillow
 
