deprecate python-pypi/kinterbasdb [replaced by fdb]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-09-22  Treeve Jelbert <treeve@sourcemage.org>
+	* python-pypi/kinterbasdb: spell deprecated [replaced by fdb]
+
 2013-09-17 Eric Sandall <sandalle@sourcemage.org>
 	* redhat.gpg: Add E1B768A0 for libguestfs and supermin from Red Hat
 	  See https://www.redhat.com/archives/libguestfs/2013-May/msg00005.html
