--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,6 @@
+2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version v1.3
+
 2013-08-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add docbook-xsl
 	  fixes #588
