--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-09-22  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/kinterbasdb: spell deprecated [replaced by fdb]
+	* devel/qxorm: new spell, ORM library for Qt/Boost
 
 2013-09-17 Eric Sandall <sandalle@sourcemage.org>
 	* redhat.gpg: Add E1B768A0 for libguestfs and supermin from Red Hat
