--- a/perl-cpan/parrot/HISTORY
+++ b/perl-cpan/parrot/HISTORY
@@ -1,3 +1,6 @@
+2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.7.0/5.0.0
+
 2012-04-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.2.0/4.0.0
 	* DEPENDS: add zlib, optional libffi, llvm
