--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.54
+
 2013-04-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.51
 
