xorg-driver/glamor: new spell, 2D acceleration driver for X Window System

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-09-22 Pol Vinogradov <vin.public@gmail.com>
+	* xorg-driver/glamor: new spell, 2D acceleration driver for X Window System
+
 2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/input-utils: new spell, a set of tools for debugging input
 	  layer specific problems
