--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,6 @@
+2013-09-22 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: git version optionally depends on glamor
+
 2013-08-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS version 7.2.0
 
