--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,9 @@
+2013-09-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.15 (legacy)
+	* PRE_SUB_DEPENDS: fixed branch detection
+	* REPAIR^2994eb49747c30e2162e04fb1a7cd960^PRE_SUB_DEPENDS: added, to
+	  replace buggy PRE_SUB_DEPENDS file
+
 2013-05-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.2.1
 
