deadbeef: dependency fixes

--- a/audio-players/deadbeef/HISTORY
+++ b/audio-players/deadbeef/HISTORY
@@ -1,3 +1,12 @@
+2013-09-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: readability++; fixed libsndfile flags; added disable flag
+	  for disabled gtk+3 operation; added missing gettext and dbus optional
+	  dependencies; added timidity suggest dependency; corrected libcdio
+	  and libcddb dependency order; added flags for ALAC; fixed ffmpeg
+	  support
+	* BUILD: added, to keep DEADBEEF_OPTS
+	* FINAL: added, to rebuild gtk icon cache
+
 2012-11-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.6
 
