--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,11 @@
+2013-09-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated source url; short description
+	* INTALL: added, to install default monitrc config with correct perms
+	* init.d/monit: added, init script
+
+2013-09-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.6
+
 2011-11-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.3.1
 
