--- a/disk/pmount/HISTORY
+++ b/disk/pmount/HISTORY
@@ -1,3 +1,16 @@
+2013-09-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.9.23; updated source url and source
+	  extension; fixed short description
+	* BUILD: removed dirty hacks
+	* DEPENDS: hal and dbus are optional; removed obsolete sysfsutils
+	  dependency; added ntfs-3g suggest dependency; added missing generic
+	  dependencies; removed tabs
+	* CONFIGURE: dropped, not needed anymore
+	* INSTALL: removed tabs
+	* PRE_BUILD: removed patching with the non-required 2nd source
+	* PRE_INSTALL: changed hal condition
+	* FINAL: added, to install /media directory and show post-cast message
+
 2010-02-27 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated to 0.9.20
 
