--- a/disk/pmount/INSTALL
+++ b/disk/pmount/INSTALL
@@ -1,7 +1,11 @@
-make PREFIX=$INSTALL_ROOT/usr install		&&
+make PREFIX=$INSTALL_ROOT/usr install &&
+
 chgrp plugdev ${INSTALL_ROOT}/usr/bin/pmount \
-	${INSTALL_ROOT}/usr/bin/pmount-hal \
-	${INSTALL_ROOT}/usr/bin/pumount  	&&			
+              ${INSTALL_ROOT}/usr/bin/pumount &&
+
+if is_depends_enabled $SPELL hal; then
+  chgrp plugdev ${INSTALL_ROOT}/usr/bin/pmount-hal
+fi &&
+
 chmod 4750 ${INSTALL_ROOT}/usr/bin/pmount \
-	   ${INSTALL_ROOT}/usr/bin/pumount &&
-message "\nDon't forget to add the users allowed to pmount in plugdev group\n"
+           ${INSTALL_ROOT}/usr/bin/pumount
