--- a/shell-term-fm/spacefm/HISTORY
+++ b/shell-term-fm/spacefm/HISTORY
@@ -1,4 +1,13 @@
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2013-09-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.8.7
+	* BUILD: added, to keep SPACEFM_OPTS
+	* CONFIGURE: added, to select between gtk+2/gtk+3 and for desktop
+	  integration flags
+	* DEPENDS: added missing dependencies
+	* PRE_BUILD: added, to fix sha*sum paths
+	* FINAL: added, as recommended in README
+
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2012-09-15 Ladislav Hagara <hgr@vabo.cz>
