--- a/utils/youtube-dl/HISTORY
+++ b/utils/youtube-dl/HISTORY
@@ -1,3 +1,6 @@
+2013-09-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2013.09.24.2
+
 2013-07-18 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2013.07.18
 
