--- a/devel/byacc/HISTORY
+++ b/devel/byacc/HISTORY
@@ -1,3 +1,6 @@
+2013-09-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20130925
+
 2013-03-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20130304
 
