easytag: removed extra harfbuzz dependency

--- a/audio-soft/easytag/HISTORY
+++ b/audio-soft/easytag/HISTORY
@@ -1,3 +1,6 @@
+2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: removed extra harfbuzz dependency
+
 2013-02-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.1.8; quoting paths
 	* DEPENDS: fixed dependencies
