--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,7 @@
+2013-09-26 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: 2.1.0
+	* vlc.gpg: add key E58D1ADC
+
 2013-08-01 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: 2.0.8
 
