--- a/graphics/inkscape/HISTORY
+++ b/graphics/inkscape/HISTORY
@@ -1,3 +1,7 @@
+2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: depends only on specific boost lib and headers (iostreams)
+	* INSTALL: added, to fix multijob install
+
 2012-12-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.48.4, SECURITY_PATCH=2
 
