vlc: fixed permissions for PRE_BUILD

--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: fixed permissions - 755
+
 2013-09-26 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: 2.1.0
 	* vlc.gpg: add key E58D1ADC
