--- a/kernels/kmod/HISTORY
+++ b/kernels/kmod/HISTORY
@@ -1,3 +1,6 @@
+2013-09-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 15
+
 2013-07-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 14
 
