--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,6 @@
+2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.3 (stable)
+
 2013-09-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.7.15 (legacy)
 	* PRE_SUB_DEPENDS: fixed branch detection
