--- a/video-libs/libass/HISTORY
+++ b/video-libs/libass/HISTORY
@@ -1,3 +1,9 @@
+2013-09-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up; added missing enable flags; cleaned up
+
+2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell 0.10.1; gpg -> hash; fixed short desc
+
 2011-12-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.10.0
 	* DEPENDS: changed some to optional depends
