ffmpeg: rewritten the spell

--- a/video/ffmpeg/INSTALL
+++ b/video/ffmpeg/INSTALL
@@ -1,3 +1,7 @@
 make_single &&
-install_config_file doc/ffserver.conf ${INSTALL_ROOT}/etc/ffserver.conf  &&
-make    install
+make V=1 install &&
+make_normal &&
+
+if list_find "ffserver" "$FFMPEG_PROGRAMS"; then
+  install_config_file doc/ffserver.conf ${INSTALL_ROOT}/etc/ffserver.conf
+fi
