ffmpeg: added build for qt-faststart tool

--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,5 +1,6 @@
 2013-09-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, {PRE_,}BUILD, CONFIGURE, DEPENDS, INSTALL, PREPARE: rewritten
+	  added build for qt-faststart tool
 
 2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.3 (stable)
