--- a/video-libs/live/HISTORY
+++ b/video-libs/live/HISTORY
@@ -1,3 +1,6 @@
+2013-09-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 2013.09.27
+
 2013-05-06 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2013.04.30
 
