--- a/kde4-look/oxygen-gtk2/HISTORY
+++ b/kde4-look/oxygen-gtk2/HISTORY
@@ -1,3 +1,6 @@
+2013-09-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 1.4.0
+
 2013-02-14 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 1.3.2.1
 
