mpv: new spell, free and open-source general-purpose video player

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-09-27 Vlad Glagolev <stealth@sourcemage.org>
+	* video/mpv: new spell, free and open-source general-purpose video player
+
 2013-09-22  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/kinterbasdb: spell deprecated [replaced by fdb]
 	* devel/qxorm: new spell, ORM library for Qt/Boost
