--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,6 @@
+2013-09-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.33
+
 2012-11-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.32; SECURITY_PATCH++ (CVE-2012-5533)
 
