--- a/security/fwknop/HISTORY
+++ b/security/fwknop/HISTORY
@@ -1,3 +1,6 @@
+2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: added missing handle of $FWKNOP_OPTS
+
 2013-08-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.5.1; do not include doc build directory
 
