--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
+	* quvi.gpg: added AD00BE50 public key (Toni Gundogdu <legatvs@gmail.com>)
+	  for quvi spell
+
 2013-09-27 Vlad Glagolev <stealth@sourcemage.org>
 	* video/mpv: new spell, free and open-source general-purpose video player
 
