libquvi-scripts: new spell, support scripts for libquvi calls

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
+	* libs/libquvi-scripts: new spell, support scripts for libquvi calls
 	* quvi.gpg: added AD00BE50 public key (Toni Gundogdu <legatvs@gmail.com>)
 	  for quvi spell
 
