--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* libs/libquvi-scripts: new spell, support scripts for libquvi calls
+	* libs/libquvi: new spell, library with the C API for parsing the media
+	  stream properties
 	* quvi.gpg: added AD00BE50 public key (Toni Gundogdu <legatvs@gmail.com>)
 	  for quvi spell
 
