--- a/utils/quvi/HISTORY
+++ b/utils/quvi/HISTORY
@@ -1,3 +1,9 @@
+2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.4.2; updated source extension, license,
+	  description; converted to upstream gpg checking; don't do useless
+	  doc'ing
+	* DEPENDS: renewed dependencies
+
 2012-07-28 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: depends on lua51
 
