--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added libquvi support
+
 2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, CONFIGURE, BUILD, INSTALL, mpv.png,
 	  desktop/mpv.desktop: spell created
