libao: fix license and update description

--- a/audio-libs/libao/HISTORY
+++ b/audio-libs/libao/HISTORY
@@ -1,3 +1,6 @@
+2013-09-29 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: fix license (GPL, not LGPL), update description
+
 2012-02-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.1.0
 	* DEPENDS: corrected flags for alsa
