--- a/http/links-twibright/HISTORY
+++ b/http/links-twibright/HISTORY
@@ -1,3 +1,6 @@
+2013-09-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.8
+
 2012-06-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.7
 	* DEPENDS: added missing dependency on xz-utils
