--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,8 @@
+2013-10-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* init.d/monit: moved to runlevel 2, according to official doc; depends
+	  on local_fs instead of network
+
 2013-09-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated source url; short description
 	* INTALL: added, to install default monitrc config with correct perms
