--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-10-02 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.11.3
+	* info/patches/maintenance_patches_3/patch-3.11.3: added
+
 2013-09-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.11.1: added
 	* latest_defaults: version 3.11.1
