--- a/ftp/ncdc/HISTORY
+++ b/ftp/ncdc/HISTORY
@@ -1,3 +1,6 @@
+2013-10-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.18
+
 2013-06-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.17
 
