--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2013-10-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.39
+
 2013-09-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.38
 
