--- a/libs/tzdata/HISTORY
+++ b/libs/tzdata/HISTORY
@@ -1,3 +1,6 @@
+2013-10-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2013g
+
 2013-08-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2013d
 
