science/qlandkarte-gt: version 1.7.4

--- a/science/qlandkarte-gt/HISTORY
+++ b/science/qlandkarte-gt/HISTORY
@@ -1,3 +1,6 @@
+2013-10-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.7.4
+
 2013-09-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.7.3
 
