--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2013-10-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.8.4.1
+
 2013-08-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.4
 
