--- a/x11-toolkits/wxgtk-new/HISTORY
+++ b/x11-toolkits/wxgtk-new/HISTORY
@@ -1,3 +1,6 @@
+2013-10-03 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.9.5
+
 2013-04-02 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFIGURE: added
 	* BUILD, DEPENDS: allow use of gtk+{3,2}
