--- a/latex/texinfo/HISTORY
+++ b/latex/texinfo/HISTORY
@@ -1,3 +1,6 @@
+2013-10-04 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 5.2
+
 2013-04-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: Updated to 5.1
 	* DEPENDS: add perl, remove texlive
