haskell/haskell-git-annex: version 4.20131002

--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,6 @@
+2013-10-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.20131002
+
 2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.20130909
 
