chat-irc/weechat: stable 0.4.2, unstable 0.4.3-dev

--- a/chat-irc/weechat/HISTORY
+++ b/chat-irc/weechat/HISTORY
@@ -1,3 +1,8 @@
+2013-10-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: stable 0.4.2, unstable 0.4.3-dev
+	* PREPARE, INSTALL: remove option to create symlinks which
+	  the install target does by default now
+
 2013-05-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated stable to 0.4.1
 
