--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2013-10-06 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 1.16.0
+
 2013-05-22 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 1.15.4
 
