--- a/crypto/libassuan/HISTORY
+++ b/crypto/libassuan/HISTORY
@@ -1,3 +1,6 @@
+2013-10-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.1.1
+
 2013-06-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1.0
 
