xlockmore: added missing dependencies

--- a/x11/xlockmore/HISTORY
+++ b/x11/xlockmore/HISTORY
@@ -1,3 +1,8 @@
+2013-10-08 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD, CONFIGURE: deprecate XLOCKMORE_BO
+	* DEPENDS: added missing dependencies (required: libx11; optional:
+	  libxpm, libxinerama, gtk+, imagemagick)
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.43
 
