--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,7 @@
+2013-10-08 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD, INSTALL: added
+	  need to support simultaneous python2/3
+
 2013-09-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.6
 
