--- a/x11/slim/HISTORY
+++ b/x11/slim/HISTORY
@@ -1,3 +1,8 @@
+2013-10-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.6
+	* PRE_BUILD: apply patch
+	* no-pam.patch: added, to fix build with optional linux-pam support
+
 2013-01-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.5
 	* PRE_BUILD: dropped version patching, fixed by upstream; fixed systemd
