--- a/utils/xen/HISTORY
+++ b/utils/xen/HISTORY
@@ -1,4 +1,7 @@
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2013-10-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.1.6.1; SECURITY_PATCH++
+
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2013-06-25 Vlad Glagolev <stealth@sourcemage.org>
