--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,7 @@
+2013-10-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.4 (stable)
+	* BUILD, DEPENDS: moved license handling to BUILD
+
 2013-09-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, {PRE_,}BUILD, CONFIGURE, DEPENDS, INSTALL, PREPARE: rewritten
 	  added build for qt-faststart tool
