wm-addons/batterymon-clone: new spell, updated clone of batterymon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-09 Jeremy Blosser <jblosser@sourcemage.org>
+	* wm-addons/batterymon-clone: new spell, updated clone of batterymon
+
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* libs/libquvi-scripts: new spell, support scripts for libquvi calls
 	* libs/libquvi: new spell, library with the C API for parsing the media
