--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-10-09 Jeremy Blosser <jblosser@sourcemage.org>
 	* wm-addons/batterymon-clone: new spell, updated clone of batterymon
 	* libs/libva: new spell, Video Acceleration (VA) API for Linux
+	* libs/libva-intel-driver: new spell, HW video decode support for Intel integrated graphics
 
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* libs/libquvi-scripts: new spell, support scripts for libquvi calls
