python-pypi/batterymon-clone: new spell, updated clone of batterymon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2013-10-09 Jeremy Blosser <jblosser@sourcemage.org>
+	* python-pypi: batterymon-clone: new spell, updated clone of batterymon
 	* libs/libva: new spell, Video Acceleration (VA) API for Linux
 	* libs/libva-intel-driver: new spell, HW video decode support for Intel integrated graphics
 
