--- a/net/openswan/HISTORY
+++ b/net/openswan/HISTORY
@@ -1,3 +1,8 @@
+2013-10-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.39; SECURITY_PATCH++ (CVE-2013-2053)
+	* openswan.gpg: added 9FC816CA public key (Openswan Master Signing Key
+	  <build@openswan.org>)
+
 2012-04-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.38; use openswan.gpg
 	* B7E82DF8.gpg: renamed to openswan.gpg
