--- a/python-pypi/hatta/HISTORY
+++ b/python-pypi/hatta/HISTORY
@@ -1,3 +1,7 @@
+2013-10-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.3
+	* locale.patch: updated for new release
+
 2013-08-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.2
 	* PRE_BUILD: added, to apply a patch
