--- a/chat-im/pidgin/HISTORY
+++ b/chat-im/pidgin/HISTORY
@@ -1,3 +1,6 @@
+2013-10-10 Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: --enable-dbus wants dbus-glib, not just dbus
+
 2013-02-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.10.7, SECURITY_PATCH=16
 
