--- a/chat-im/purple-plugin-pack/HISTORY
+++ b/chat-im/purple-plugin-pack/HISTORY
@@ -1,3 +1,6 @@
+2013-10-10 Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: ./configure needs PYTHON
+
 2010-10-08 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 2.6.2 & fixed SOURCE_URL
 	* 9EA132A6.gpg: added gpg keyring
