--- a/utils/notify-osd/HISTORY
+++ b/utils/notify-osd/HISTORY
@@ -1,3 +1,6 @@
+2013-10-10 Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: libwnck => libwnck3
+
 2013-03-08 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 0.9.34
 	  changed to upstream GPG verification
