--- a/cinnamon-desktop/cinnamon/HISTORY
+++ b/cinnamon-desktop/cinnamon/HISTORY
@@ -1,3 +1,7 @@
+2013-10-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.2
+	* DEPENDS: cjs added
+
 2013-05-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.8.2, SOURCE_URL[0] and SOURCE_DIRECTORY updated
 
