--- a/xfce/xfce4-notifyd/HISTORY
+++ b/xfce/xfce4-notifyd/HISTORY
@@ -1,3 +1,6 @@
+2013-10-10 Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: libxfce4ui
+
 2013-06-14 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.2.4
 	  SOURCE matches upstream posted SHA1
