--- a/cinnamon-desktop/cinnamon-screensaver/HISTORY
+++ b/cinnamon-desktop/cinnamon-screensaver/HISTORY
@@ -1,2 +1,5 @@
+2013-10-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.0
+
 2013-05-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS, PRE_BUILD: spell created, version 1.8.0
