--- a/cinnamon-desktop/nemo/HISTORY
+++ b/cinnamon-desktop/nemo/HISTORY
@@ -1,3 +1,6 @@
+2013-10-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.0, SOURCE_URL[0] and SOURCE_DIRECTORY updated
+
 2013-05-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.8.0
 	* BUILD, FINAL, POST_REMOVE: added
