--- a/cinnamon-desktop/muffin/HISTORY
+++ b/cinnamon-desktop/muffin/HISTORY
@@ -1,4 +1,8 @@
-2014-05-06 Ladislav Hagara <hgr@vabo.cz>
+2013-10-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.1
+	* DEPENDS: cinnamon-desktop added
+
+2013-05-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.8.0
 
 2012-10-27 Ladislav Hagara <hgr@vabo.cz>
