--- a/cinnamon-desktop/cinnamon-control-center/HISTORY
+++ b/cinnamon-desktop/cinnamon-control-center/HISTORY
@@ -1,2 +1,6 @@
+2013-10-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.2
+	* DEPENDS: gnome-settings-daemon -> cinnamon-settings-daemon
+
 2013-05-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS, PRE_BUILD: spell created, version 1.8.0
