devel/make: version 4.0

--- a/devel/make/HISTORY
+++ b/devel/make/HISTORY
@@ -1,3 +1,7 @@
+2013-10-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.0
+	* PRE_BUILD, bug30612.patch, bug30723.patch: removed
+
 2011-04-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added gettext optional dependency
 
