--- a/devel/make/HISTORY
+++ b/devel/make/HISTORY
@@ -1,3 +1,6 @@
+2013-10-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add optional guile
+
 2013-10-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.0
 	* PRE_BUILD, bug30612.patch, bug30723.patch: removed
