--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,4 +1,7 @@
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2013-10-112 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.47
+
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2013-07-03 Treeve Jelbert <treeve@sourcemage.org>
