--- a/video-libs/live/HISTORY
+++ b/video-libs/live/HISTORY
@@ -1,3 +1,6 @@
+2013-10-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2013.10.11
+
 2013-09-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 2013.09.27
 
