--- a/libs/icu/HISTORY
+++ b/libs/icu/HISTORY
@@ -1,3 +1,6 @@
+2013-10-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 52.1 (both)
+
 2013-06-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 51.1 (both)
 	* BUILD: -lintl flags not needed
