xorg-xserver/xorg-server: remove obsolete patch, refresh outdated patch

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,8 @@
+2013-10-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 0001-fix-buffer-overflow.patch: remove obsolete
+	  patch that prevents PRE_BUILD from succeeding
+	* gl_select.patch: renew patch so PRE_BUILD succeeds
+
 2013-09-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.14.3
 
