python-pypi/pexpect: new spell, pure Python expect-like module

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-13 Ladislav Hagara <hgr@vabo.cz>
+	* python-pypi/pexpect: new spell, pure Python expect-like module
+
 2013-10-09 Jeremy Blosser <jblosser@sourcemage.org>
 	* python-pypi: batterymon-clone: new spell, updated clone of batterymon
 	* libs/libva: new spell, Video Acceleration (VA) API for Linux
