--- a/video/v4l-utils/HISTORY
+++ b/video/v4l-utils/HISTORY
@@ -1,3 +1,7 @@
+2013-10-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.0.0
+	* DEPENDS: qv4l2 enabled
+
 2013-06-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.5
 
