cinnamon needs python-pam and pexpect

--- a/cinnamon-desktop/cinnamon/HISTORY
+++ b/cinnamon-desktop/cinnamon/HISTORY
@@ -1,3 +1,6 @@
+2013-10-13 Ladislav Hagara <hgr@vabo.cz>
+	* DEPENDS: python-pam and pexpect added
+
 2013-10-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.2
 	* DEPENDS: cjs added
