xf86-input-synaptics: => 1.7.1

--- a/xorg-driver/xf86-input-synaptics/HISTORY
+++ b/xorg-driver/xf86-input-synaptics/HISTORY
@@ -1,5 +1,9 @@
+2013-10-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.7.1
+	* DEPENDS: requires mtdev
+
 2012-03-28 Treeve Jelbert <treeve@sourcemage.org>
-	* * DETAILS: version 1.5.2
+	* DETAILS: version 1.5.2
 
 2011-03-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.4.0
