psmouse-elantech: new spell, psmouse kernel module with support for elantech with multitouch

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-13 Vlad Glagolev <stealth@sourcemage.org>
+	* kernels/psmouse-elantech: new spell, psmouse kernel module with
+	  support for elantech with multitouch
+
 2013-10-13 Jeremy Blosser <jblosser@sourcemage.org>
 	* chat-libs/libstrophe: new spell, XMPP library in C
 	* chat-im/profanity: new spell, console based XMPP client
