--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.22
+
 2013-03-27 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_BUILD: add fix for icu-51.1
 
