--- a/utils/iso-codes/HISTORY
+++ b/utils/iso-codes/HISTORY
@@ -1,3 +1,6 @@
+2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.47
+
 2012-08-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.38, bz2 -> xz
 
