kde4-apps/clementine: new spell, music player and library organizer

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-15 Ladislav Hagara <hgr@vabo.cz>
+	* kde4-apps/clementine: new spell, music player and library organizer
+
 2013-10-14 Jeremy Blosser <jblosser@sourcemage.org>
 	* lua-forge/lualdap: new spell, LDAP library for lua
 
