--- a/libs/tbb/HISTORY
+++ b/libs/tbb/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 42_20130725
+
 2013-09-02 Robin Cook <rcook@wyrms.net>
 	* INSTALL: added -f to link command
 
