--- a/devel/erlang/HISTORY
+++ b/devel/erlang/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: R16B02
+
 2012-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: R15B
 
