--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,6 @@
+2013-10-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.10.1
+
 2013-08-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.10
 	* BUILD: updated, mozilla/nsprpub -> nspr
