--- a/disk/sg3_utils/HISTORY
+++ b/disk/sg3_utils/HISTORY
@@ -1,3 +1,6 @@
+2013-10-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.37
+
 2013-06-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.36, bz2 -> xz
 
