text-numericdata: new spell, replacing textdata

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
+	* perl-cpan/textdata: spell deprecated [replaced upstream]
+	* perl-cpan/text-numericdata: new spell, replacing textdata
+
 2013-10-15 Ladislav Hagara <hgr@vabo.cz>
 	* kde4-apps/clementine: new spell, music player and library organizer
 
