--- a/perl-cpan/textdata/HISTORY
+++ b/perl-cpan/textdata/HISTORY
@@ -1,3 +1,8 @@
+2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
+	* spell deprecated [replaced upstream]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
