text-asciipipe: bump to 1.001000

--- a/perl-cpan/text-asciipipe/HISTORY
+++ b/perl-cpan/text-asciipipe/HISTORY
@@ -1,2 +1,4 @@
+2013-09-18 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: update to 1.001000
 2012-10-02 Thomas Orgis <sobukus@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS: spell created
