libatasmart - depends UDEV

--- a/disk/libatasmart/HISTORY
+++ b/disk/libatasmart/HISTORY
@@ -1,3 +1,6 @@
+2013-10-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: added, for UDEV
+
 2012-09-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.19
 	  .gz => .xz
