rdflib: bump to 4.0.1

--- a/python-pypi/rdflib/HISTORY
+++ b/python-pypi/rdflib/HISTORY
@@ -1,3 +1,6 @@
+2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 4.0.1, website moved to github
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
