sratom: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
 	* audio-libs/lv2core: spell deprecated [upstream repackaging]
 	* audio-libs/lv2: new spell, full bundle replacing lv2core
+	* libs/sratom: new spell, library for LV2 atoms
 
 2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
 	* perl-cpan/textdata: spell deprecated [replaced upstream]
