lilv: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* audio-libs/lv2core: spell deprecated [upstream repackaging]
 	* audio-libs/lv2: new spell, full bundle replacing lv2core
 	* audio-libs/sratom: new spell, library for LV2 atoms
+	* audio-libs/lilv: new spell, LV2 C library
 
 2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
 	* perl-cpan/textdata: spell deprecated [replaced upstream]
