sratom-0, lilv-0, lilv-util: Trying to sort out the mess with multi-version libs and utils.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
 	* audio-libs/lv2core: spell deprecated [upstream repackaging]
 	* audio-libs/lv2: new spell, full bundle replacing lv2core
-	* audio-libs/sratom: new spell, library for LV2 atoms
-	* audio-libs/lilv: new spell, LV2 C library
+	* audio-libs/sratom-0: new spell, library for LV2 atoms
+	* audio-libs/lilv-0: new spell, LV2 C library
+	* audio-soft/lilv-util: new spell, utilities for lilv
 
 2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
 	* perl-cpan/textdata: spell deprecated [replaced upstream]
