suil-0: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* audio-libs/sratom-0: new spell, library for LV2 atoms
 	* audio-libs/lilv-0: new spell, LV2 C library
 	* audio-soft/lilv-util: new spell, utilities for lilv
+	* audio-libs/suil-0: new spell, LV2 GUI host library
 
 2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
 	* perl-cpan/textdata: spell deprecated [replaced upstream]
