ardour2: fix build with current lilv

--- a/audio-creation/ardour2/HISTORY
+++ b/audio-creation/ardour2/HISTORY
@@ -1,3 +1,7 @@
+2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD, ardour-2.8.16-lilv16.patch: build fix from
+	  https://abf.rosalinux.ru/openmandriva/ardour/raw/master/ardour-2.8.16-lilv16.patch
+
 2013-02-03 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 2.8.16
 	* DEPENDS, CONFIGURE, BUILD: SYSLIBS=1 is the only way to build things now
