ardour3: ChangeLog entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* audio-libs/lilv-0: new spell, LV2 C library
 	* audio-soft/lilv-util: new spell, utilities for lilv
 	* audio-libs/suil-0: new spell, LV2 GUI host library
+	* audio-creation/ardour3: new spell, DAW (installable alongside ardour2)
 
 2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
 	* perl-cpan/textdata: spell deprecated [replaced upstream]
