smake: new spell, highly portable make program with automake features

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-27 Ismael Luceno <ismael@sourcemage.org>
+	* devel/smake: new spell, highly portable make program with automake
+	  features
+
 2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
 	* audio-libs/lv2core: spell deprecated [upstream repackaging]
 	* audio-libs/lv2: new spell, full bundle replacing lv2core
