firefox 25.0, SECURITY_PATCH=68

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2013-10-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 25.0, SECURITY_PATCH=68
+
 2013-09-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 24.0, SECURITY_PATCH++
 
