Spell (nss) Dependancies Removed: sqlite & zip
In testing the spell and various permutations of dependancies, it
was found that sqlite and zip did not appear to be required for
compilation of nss. For this reason, the spells have been removed
from the DEPENDS file.

As the upstream vendor does not mention these programs as either
required or as optional dependencies they are being removed
completely.

--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2013-10-29 David C. Haley <khoralin@gmail.com>
+	* DEPENDS: removed sqlite, zip; no longer appears needed
+
 2013-10-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.15.2
 
