--- a/python-pypi/pyparsing/HISTORY
+++ b/python-pypi/pyparsing/HISTORY
@@ -1,3 +1,7 @@
+2013-11-02 Treeve Jelbert <treeve@sourcmage.org>
+	* DETAILS: version 2.0.1
+	* DEPENDS: depends PYTHON
+
 2013-04-17 Treeve Jelbert <treeve@sourcmage.org>
 	* DETAILS: version 1.5.7
 	  alao 2.0.0
