fluidsynth: updated to 1.1.6

--- a/audio-creation/fluidsynth/HISTORY
+++ b/audio-creation/fluidsynth/HISTORY
@@ -1,3 +1,11 @@
+2013-11-03 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.1.6
+	  updated SOURCE, SOURCE_URL, and Website
+	* DEPENDS: added new optional dependencies
+
+2013-11-03 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.1.6
+
 2008-03-16 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 1.0.8, corrected WEB_SITE.
 	* josh_green.gpg: Added upstream key.
