timidity: updated to 2.14.0

--- a/audio-players/timidity/HISTORY
+++ b/audio-players/timidity/HISTORY
@@ -1,3 +1,6 @@
+2013-11-02 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 2.14.0
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
