smpeg2: new spell, smpeg that uses sdl2

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* libs/sdl2_mixer: new spell, new version of sdl_mixer
 	* libs/sdl2_net: new spell, new version of sdl_net
 	* libs/sdl2_ttf: new spell, new version of sdl_ttf
+	* video-libs/smpeg2: new spell smpeg that uses sdl2
 
 2013-10-27 Ismael Luceno <ismael@sourcemage.org>
 	* devel/smake: new spell, highly portable make program with automake
