--- a/video/mpv/INSTALL
+++ b/video/mpv/INSTALL
@@ -2,8 +2,4 @@ make V=1 install &&
 
 install -vm 755 -d "$INSTALL_ROOT/etc/mpv" &&
 
-install -vm 644 etc/*example*.conf "$INSTALL_ROOT/etc/mpv" &&
-
-# install 64x64 transparent png icon extracted from etc/mpv-icon.ico
-install -vm 755 -d "$INSTALL_ROOT/usr/share/pixmaps" &&
-install -vm 644 $SPELL_DIRECTORY/mpv.png $INSTALL_ROOT/usr/share/pixmaps
+install -vm 644 etc/*example*.conf "$INSTALL_ROOT/etc/mpv"
