--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,8 @@
+2013-11-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.2.2; removed outdated AUTHORS doc file
+	* DEPENDS: added new optional dependencies -- lua & texlive
+	* mpv.png, desktop/mpv.desktop: removed; fixed by upstream
+
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added libquvi support
 
