--- a/net/ipsec-tools/HISTORY
+++ b/net/ipsec-tools/HISTORY
@@ -1,3 +1,11 @@
+2013-10-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.8.1; added missing docs
+	* DEPENDS: added missing optional dependencies
+	* CONFIGURE: added new configuration options
+	* INSTALL: added, for racoon init script
+	* PREPARE: added kernel 3.x support
+	* init.d/racoon{,.conf}: added, init script and config
+
 2011-06-19 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFIGURE: added, for several options
 	* BUILD: apply IPSEC_TOOLS_OPTS
