text-numericdata: bump to 2.001000

--- a/perl-cpan/text-numericdata/HISTORY
+++ b/perl-cpan/text-numericdata/HISTORY
@@ -1,3 +1,6 @@
+2013-11-07 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 2.001000
+
 2013-10-22 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: bump to 2.000004
 
