--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2013-11-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.40.0
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.39.0
 	  SECURITY_PATCH=2, fixes CVE-2013-1881
