openssh 6.4p1, SECURITY_PATCH=7

--- a/crypto/openssh/HISTORY
+++ b/crypto/openssh/HISTORY
@@ -1,3 +1,7 @@
+2013-11-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 6.4p1, SECURITY_PATCH=7
+	  http://www.openssh.com/txt/gcmrekey.adv
+
 2013-09-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.3p1
 
